--- a/src/components/PrimaryHeader/primaryHeader.css
+++ b/src/components/PrimaryHeader/primaryHeader.css
@@ -1,12 +1,30 @@
 .primary-header{
     margin-bottom: 10px;
-    background-color: rgb(231, 222, 222);
+    background-color:#f6f8fa;
     padding: 10px 10px 0 10px;
+    border-bottom: 1px solid #d0d7de;
 }
 
 .repo-title{
     font-weight: 600;
-    color: rgb(98, 19, 31)
+    color: #0969da;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.tab{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 10px;
+}
+
+
+.heading{
+    font-weight: 500;
 }
 
 .repo-details{
@@ -16,28 +34,55 @@
 
 .repo-features{
     display: flex;
-    gap: 10px;
+    gap: 20px;
 }
-.notifications , .star , .fork{
+/* .notifications , .star , .fork{
     border-radius: 5px; 
     outline: none;
     cursor: pointer;
-}
+} */
 
+.featureTab{
+    display: flex;
+    gap: 20px;
+    padding: 5px 10px;
+    align-items: center;
+    background-color: #f6f8fa;
+    cursor:pointer;
+    border:1px solid #d0d7de;
+    border-radius: 10px;
+}
 .tabs{
     display: flex;
-    gap: 10px;
-    margin-top: 20px;
+    gap: 20px;
+    margin: 30px 0px 0px 20px;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 14px;
+    font-family:Georgia, 'Times New Roman', Times, serif
 }
 
 .issues{
-    border-bottom: 4px solid rgb(112, 112, 133);
+    border-bottom: 2px solid #fd8c73;
+}
+
+.repo-type{
+    margin-left: 5px;
+    border-radius: 20px;
+    font-size: 12px;
+    outline: none;
+    border:1px solid #d0d7de;
+    cursor: pointer;
+    padding: 0 7px;
 }
 
 @media  screen and (max-width: 1023px) {
     .actions , .projects, .wiki , .security , .insights{
         display: none;
+    }
+}
+
+@media screen and (max-width: 620px){
+    .repo-features{
+        display:none;
     }
 }
